# battery-trade-optimiser

./: README.md  app.py  dummy.py  pyproject.toml
batterytradeoptimiser/: runner.py
batterytradeoptimiser/optimiser/: post_processor.py  pre_processing.py  pulp_modeller.py  settings.py
logger/: logger.py  settings.py
sample_data/: BatteryProperties.xlsx  MarketData.xlsx
tests/: test_app.py  test_end_point.py  test_preprocessor.py  test_processor.py
utils/: check_io_files.py  custom_exceptions.py
